CB-32958 Refactor default VM type fields into nested defaultVmtypes JSON structure
Consolidate flat defaultDbVmtype, defaultArmDbVmtype, defaultX86FreeIPAVmtype, and defaultArmFreeIPAVmtype fields into a nested defaultVmtypes object structure organized by service type (database, freeipa) and architecture (x86_64, arm64).

  - Introduce ArchitectureVmTypes and DefaultVmTypes POJOs for type-safe
    deserialization of the new JSON structure
  - Update RegionCoordinateSpecification, Coordinate, AzureCoordinate, and
    CloudRegions to use DefaultVmTypes instead of individual string fields
  - Transform AWS, Azure, and GCP region JSON definition files to use the
    nested defaultVmtypes format
  - Merge aws-zone-coordinates.json and aws-enabled-availability-zones.json
    into a single aws-enabled-regions.json (same for GCP)
  - Update all platform resource classes (AWS, Azure, GCP, Mock, OpenStack, Yarn)
  - Update environment and freeipa services to consume the new structure
  - Update DefaultInstanceTypeProvider to resolve FreeIPA VM types from
    the region-level DefaultVmTypes map via Architecture enum